--- a/edo-repository/pom.xml
+++ b/edo-repository/pom.xml
@@ -30,5 +30,10 @@
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.21.0</version>
+        </dependency>
     </dependencies>
 </project>
