--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=adminpassword
+spring.datasource.password=postgres
+spring.liquibase.change-log=classpath:/db_migration/changelog/db.changelog-master.xml
