--- a/edo-public-api/pom.xml
+++ b/edo-public-api/pom.xml
@@ -17,4 +17,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+
+        <!-- модуль SERVICE -->
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>edo-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+    </dependencies>
+
 </project>
